--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
- * {
+html {
+    font-size : 10.5px;
+}
+* {
     box-sizing : border-box;
 }
 :root {
@@ -76,10 +79,12 @@ html, body, form {
     text-align : center;
 }
 #wrap-center {
-    width : 1280px;
-    background-color : yellow;
+    width : 1280px;    
     display : inline-block;
 }
+
+
+/*header*/
 #header {
     text-align : left;
     position : relative;
@@ -133,6 +138,99 @@ html, body, form {
 }
 #header-shopping > div {
     background-position : -66px -318px;
+}
+
+
+/*search*/
+#search {
+    text-align : center;
+}
+#search-right {
+    display : inline-flex;
+    flex : 1;
+    width : 56px;
+    height : 58px;
+    align-items : stretch;
+    justify-content : flex-end;
+}
+#search-keyboard, #search-recent, #search-button {
+    background : transparent;
+    border : none;
+    cursor : pointer;
+}
+#search-keyboard {
+    width : 30px;
+    height : 58px;
+    padding : 22px 0px;
+}
+#search-recent {    
+    width : 22px;
+    height : 58px;
+    padding : 26px 6px;
+}
+#search-button {
+    width : 62px;
+    height : 58px;
+    background : none;
+    padding : 17px 27px 16px 10px;
+}
+#search-keyboard > div, #search-recent > div, #search-button > div {
+    background-image : url(./sp_main.png);
+    background-repeat : no-repeat;
+    background-size: 468px 457px;
+}
+#search > form {
+    display : inline-flex;
+    width : 708px;
+    height : 60px;
+    border : 1px solid #03c75a;
+    border-radius : 33px;
+    text-align : left;
+}
+#search > form:hover {
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .12);
+}
+#search-svg {
+    width : 67px;
+    height : 58px;
+    padding : 17px 16px 17px 27px;
+}
+#search-svg svg {
+    width : 24px;
+    height : 24px;
+    fill : #03c75a;
+}
+#search-input {
+    font-family: -apple-system, BlinkMacSystemFont, 
+    "Malgun Gothic", "맑은 고딕", helvetica, "Apple SD Gothic Neo", sans-serif;
+    width : 480px;
+    padding-right : 17px 0;
+    line-height : 24px;
+    font-weight : bold;
+    font-size : 2rem;
+    border : none;
+    outline : none;
+}
+#search-input::placeholder {
+    color : white;
+}
+#search-input:focus::placeholder {
+    font-family: -apple-system, BlinkMacSystemFont, 
+    "Malgun Gothic", "맑은 고딕", helvetica, "Apple SD Gothic Neo", sans-serif;;
+    color : #e4e4e4;
+}
+#search-keyboard > div {
+    background-position : -273px -279px;
+    width : 24px;
+    height : 14px;
+}
+#search-keyboard:hover {
+    filter : brightness(0.7);
+}
+#search-recent > div {
+    background-position : -457px -411px;
+    width : 10px;
+    height : 6px;
 }
 #main {
     height : 2000px;
